@@ -20,7 +20,7 @@ namespace dolfin {
     const Point& point(int i) const; // Get quadrature point
     real  weight(int i) const;       // Get quadrature weight
     real  measure() const;           // Sum of weights (area, volume)
-    
+
   protected:
     
     int n;         // Number of quadrature points
